// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootContainer renders with routeId = deviceConnectView 1`] = `
<DeviceConnectViewContainer
  cardSelectionStoreData={
    Object {
      "rules": Object {},
    }
  }
  deps={
    Object {
      "storesHub": [typemoq mock object],
    }
  }
  scanStoreData={
    Object {
      "status": 2,
    }
  }
  unifiedScanResultStoreData={
    Object {
      "rules": Array [],
    }
  }
  userConfigurationStoreData={
    Object {
      "isFirstTime": false,
    }
  }
  windowStateStoreData={
    Object {
      "currentWindowState": "customSize",
      "routeId": "deviceConnectView",
    }
  }
/>
`;

exports[`RootContainer renders with routeId = resultsView 1`] = `
<NarrowModeDetector
  Component={[Function]}
  childrenProps={
    Object {
      "cardSelectionStoreData": Object {
        "rules": Object {},
      },
      "deps": Object {
        "storesHub": [typemoq mock object],
      },
      "scanStoreData": Object {
        "status": 2,
      },
      "unifiedScanResultStoreData": Object {
        "rules": Array [],
      },
      "userConfigurationStoreData": Object {
        "isFirstTime": false,
      },
      "windowStateStoreData": Object {
        "currentWindowState": "customSize",
        "routeId": "resultsView",
      },
    }
  }
  deps={
    Object {
      "storesHub": [typemoq mock object],
    }
  }
  isNarrowModeEnabled={true}
/>
`;
